# SHCNN

./: README.md
BinROI/: about
BinROI/ITKbinarize/: test_binarize.sh
BinROI/data/: BINARY-ROIs  LIDC_Analyze  LIDC_ROI  LIDC_resampled_ROI  LIDC_xml  seg_csvs
BinROI/segment_ROIs/: XMLseg_parent.py
BinROI/write_segs_csvs/: XML2csv.py  XML2csv_dir.py  read_nod.py
LIDC_resample_ROIs/: MASTER1.sh  MASTER2.py  MASTER3.sh  compare_images.m  move_combined_failed.py  movecorrect.sh  reROIerror.txt
LIDC_resample_ROIs/Calculate_Centerpoints/: read_nod.py
LIDC_resample_ROIs/Calculate_Spacings/: About.txt  Voxel_Loop.sh  combine_voxel_dim_spacing.R  compile_xmls.py  voxel_dimensions_tocsv.py
LIDC_resample_ROIs/Combine_bmp/: combine_bmp.py
LIDC_resample_ROIs/ROISlices/: Notes  testSH.sh
LIDC_resample_ROIs/common_output/: centers.csv
LIDC_resample_ROIs/correct_nonmerging/: corrent_nonmerging.m  nonmerging_cases.txt  reROIerror.txt  remove_bad.sh
LIDC_resample_ROIs/d2a/: d2a_loop.sh  organize_dicoms.py
LIDC_resample_ROIs/old/: z spacing problem
LIDC_resample_ROIs/reROI/: notes.txt  output.txt  reROI_loop.py  testRun.sh
LIDC_resample_bitmaps/: .Rhistory  resample_bitmaps_parent.py  vol2mmwindow.R
LIDC_resample_bitmaps/data/: key_n_rad.csv  voxel_spacing.csv
LIDC_resample_bitmaps/isoROIsp/: isoROIsp_loop.sh  spacings.csv
PIPELINE/Random_Forest/RandomForest_/src/: CMakeLists.txt  RandomForest_V7.cxx  printdiffs.h
PIPELINE/Random_Forest/RandomForest_/src/old/: RandomForestOct14.cxx
VoxelCount/: CMakeLists.txt  main_backup.cxx
(+416 files in other folders)
